--- a/client/src/Components/Subscriptions/AllPlans.css
+++ b/client/src/Components/Subscriptions/AllPlans.css
@@ -78,7 +78,8 @@
   align-items: center;
   height: 9em;
   margin-bottom: 20px;
-  margin-right: 10px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 .active-plan {
   background-color: #1d4c90 !important;
